--- a/VS_1/inext.html
+++ b/VS_1/inext.html
@@ -48,7 +48,7 @@
                 </ul>
             </div>
 
-            <!-- displays grade level and unit -->
+            <!-- grade level and unit header-->
             <div class="flex justify-between align-center">
                 <div class="flex align-center">
                     <img src="./img/Grade-Icon.png" alt="grade icon" id="grade-icon">
@@ -60,7 +60,7 @@
                 </div>
             </div>
 
-            <!-- Displays lessons and challenges -->
+            <!-- lessons and challenges Buttons-->
             <div class="flex column gap-3">
                 <div class="flex column align-center gap-3">
                     <h4>Addition</h4>
@@ -136,8 +136,8 @@
             <img src="./img/Addition_Lesson/Addition_Step_4.jpg" alt="Addition Step 4" class="example">
         </div>
     </div>
-    <!-- subtraction Lesson -->
 
+    <!-- subtraction Lesson -->
     <div class="lesson flex column hidden" id="subtraction-lesson">
         <div class="flex justify-between pop-header">
             <h2>Subtracting three digit numbers</h2>
